<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linebook"
    android:gravity="center"
    tools:context="com.sqlite.sab.sqlite.HomeActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enterid"
        android:layout_margin="30dp"
        android:id="@+id/idbook"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/entername"
        android:layout_margin="30dp"
        android:id="@+id/entName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enterbook"
        android:layout_margin="30dp"
        android:id="@+id/entbook"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/enter"
        android:text="@string/enterbtn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/showbooks"
        android:text="@string/showkbook"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/delbooksbooks"
        android:text="@string/delbook"/>



</LinearLayout>
